# CustomLogger

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BuildThirdParty.py  CMakeLists.txt  CustomLogger.uplugin
Source/CustomLogger/: CustomLogger.Build.cs
Source/CustomLogger/Private/: CustomLogger.cpp  CustomOutputDevice.cpp  CustomOutputDevice.h
Source/CustomLogger/Public/: CustomLogger.h
Source/CustomLoggerJsonEncoding/: CustomLoggerJsonEncoding.Build.cs
Source/CustomLoggerJsonEncoding/Private/: JsonEncoding.cpp
Source/CustomLoggerJsonEncoding/Public/: JsonEncoding.h
listen/: .clang-format  CMakeLists.txt
listen/source/: colors.h  json_decoding.cc  json_decoding.h  main.cc
